Revision history for File::DataClass

0.52.1    2014-11-10 12:40:46
          - Fixed NTFS skip in tests

0.51.1    2014-11-09 15:49:44
          - Mark NTFS as unsupported
          - Make ::IO::atomic a no op on mswin32
            f1cbd4c4-6bf5-1014-bf4f-15730ce696e1 - which didn't work
            so behaviour restored
          - Added t/boilerplate.pm
          - New win32 fail added debug to tests
            7ccf4f62-8e65-1014-a370-e51e2b825c07

0.50.1    2014-11-07 18:49:49
          - Added async locking and constants
          - Added IO::has_lock to track the state of the flock
          - Changed IO::_lock from a bool to an enumerated type
            Can be FALSE, LOCK_BLOCKING, or LOCK_NONBLOCKING

0.49.1    2014-10-02 20:57:55
          - Updated prereqs
          - Spelling fixes
          - Removed Hash::MoreUtils require from tests

0.48.1    2014-09-03 23:22:44
          - Removed CHI. Reduces dependencies

0.47.1    2014-08-27 17:15:48
          - Have new one liner to feature test this particular insanity
            d26d4928-6bf5-1014-99ad-e1a5890cd912

0.46.1    2014-08-26 17:40:30
          - Hate win32 smokers
            0b96e4a1-6bf7-1014-b852-a17c890cd912
          - Added MANIFEST to repository
          - Fixed dependency version
          - Added Travis integration and badges
          - Adjusted toolchain for Github

0.45.1    2014-08-18 23:58:19
          - Bumped Type:Tiny version RT#98113

0.44.1    2014-07-16 13:37:02
          - Deleted dependency on strictures
          - Deleted some exception tests

0.43.1    2014-07-04 13:17:32
          - Releasing
          - Fixed resultset update and added tests
          - Added backwards bool to ::IO
          - Skipping heads / tails test on win32 since it's too flakey
            29a2bb0c-6bf4-1014-974a-4394dad81770

0.42.1    2014-07-04 00:27:00
          - Releasing
          - Fixed type error in ::ResultSet::delete
          - Replaced namespace::sweep with ::autoclean